# Doorman

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: access_guard-ci.yml  ci.yml  doorman-ci.yml  persona_keeper-ci.yml  shop-ci.yml
apps/access_guard/: .env.example  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
apps/access_guard/compose/dev/: Dockerfile
apps/access_guard/migrations/versions/: a4ac7f4dfb72_user_model.py
apps/access_guard/src/: main.py
apps/access_guard/src/apps/authentication/: schemas.py
apps/access_guard/src/apps/users/: models.py  routers.py
apps/access_guard/src/core/: database.py
apps/access_guard/tests/apps/: conftest.py
apps/doorman/: .editorconfig  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
apps/doorman/migrations/: env.py
apps/doorman/src/apps/authentication/: routers.py  schemas.py
apps/doorman/src/apps/authentication/services/: jwt.py  users.py
apps/doorman/src/apps/users/: services.py
apps/doorman/tests/api/users/: test_user_api.py
apps/doorman/tests/apps/authentication/api/: test_authentication_api.py
apps/doorman/tests/apps/authentication/services/: test_authentication_service.py  test_jwt.py
apps/doorman/tests/apps/healthcheck/api/: test_healthcheck_api.py
apps/doorman/tests/apps/users/api/: test_user_api.py
apps/doorman/tests/apps/users/services/: registration.py
apps/doorman/tests/core/: test_settings.py
apps/doorman/tests/services/authentication/: test_jwt.py
apps/persona_keeper/: docker-compose.dev.yml  pyproject.toml
apps/persona_keeper/migrations/: env.py
apps/persona_keeper/src/: main.py
apps/persona_keeper/src/apps/auth/: jwt.py  schemas.py
apps/persona_keeper/src/apps/healthcheck/: routers.py  schemas.py
apps/persona_keeper/src/apps/user/: routers.py  schemas.py  services.py
apps/persona_keeper/src/core/: settings.py
apps/persona_keeper/tests/: conftest.py
apps/persona_keeper/tests/apps/: conftest.py
apps/persona_keeper/tests/apps/user/api/: test_user_api.py  test_user_signup.py
apps/persona_keeper/tests/apps/user/factories/: user.py
apps/persona_keeper/tests/apps/user/services/: test_user_signup.py
apps/persona_keeper/tests/core/: conftest.py
apps/persona_keeper/tests/mocks/: auth.py
apps/shop/: .env.example  README.md  manage.py  pyproject.toml
apps/shop/compose/dev/: Dockerfile
apps/shop/config/: asgi.py  env.py  urls.py
apps/shop/config/settings/: base.py  dev.py
apps/shop/none/common/: models.py
apps/shop/none/item/services/: item.py
apps/shop/none/item/views/items/: item_create.py  item_update.py
apps/shop/shop/api/: pagination.py  utils.py
apps/shop/shop/item/: apps.py  urls.py
apps/shop/shop/item/migrations/: 0001_initial.py  0002_item_net_cost.py
apps/shop/shop/item/models/: __init__.py  items.py
apps/shop/shop/item/selectors/: item.py
apps/shop/shop/item/services/: item.py
apps/shop/shop/item/views/items/: item_create.py  item_delete.py  item_detail.py  item_list.py  item_update.py
apps/shop/shop/order/: apps.py  urls.py
apps/shop/shop/order/migrations/: 0001_initial.py
apps/shop/shop/order/models/: __init__.py  order.py
apps/shop/shop/order/selectors/: order.py
apps/shop/shop/order/services/: order.py
apps/shop/shop/order/views/order/: __init__.py  order_create.py  order_delete.py  order_detail.py  order_list.py  order_update.py
apps/shop/tests/api/item/: test_items_crud.py
apps/shop/tests/api/order/: order.py
apps/shop/tests/common/models/: base_model_field_test.py
apps/shop/tests/factories/item/: item.py
apps/shop/tests/factories/order/: order.py
apps/shop/tests/item/api/: test_items_crud.py
apps/shop/tests/item/models/: test_item_model_fields.py
apps/shop/tests/item/selectors/: test_item.py
apps/shop/tests/item/services/: test_item.py
apps/shop/tests/models/common/: base_model_field_test.py
apps/shop/tests/models/item/: test_item_model_fields.py
apps/shop/tests/models/order/: test_order_item_model_fields.py  test_order_model_fields.py
apps/shop/tests/order/api/: order.py
apps/shop/tests/order/factories/: __init__.py  order.py
apps/shop/tests/order/models/: test_order_item_model_fields.py  test_order_model_fields.py
apps/shop/tests/order/selectors/: order.py
apps/shop/tests/order/services/: test_order.py
apps/shop/tests/selectors/item/: test_item.py
apps/shop/tests/selectors/order/: order.py
apps/shop/tests/services/item/: test_item.py
apps/shop/tests/services/order/: test_order.py
compose/dev/: Dockerfile  start
compose/test/: Dockerfile
config/: urls.py
config/settings/: base.py  dev.py  test.py
migrations/: env.py
migrations/versions/: 6a11dc1df7d9_user_firstname_and_last_name_fields.py
none/item/: apps.py  urls.py
none/item/migrations/: 0001_initial.py
none/item/models/: items.py
none/item/selectors/: item.py
none/item/views/items/: __init__.py  item_delete.py  item_detail.py  item_list.py
src/: main.py
src/apps/authentication/: routers.py  schemas.py  services.py
src/apps/authentication/services/: jwt.py  users.py
src/apps/healthcheck/: routers.py  schemas.py
src/apps/users/: models.py  routers.py  schemas.py  services.py
src/core/: auth_handler.py  database.py  settings.py
src/core/models/: __init__.py  user.py
src/core/schemas/: auth.py
src/routers/: __init__.py  auth.py  healthcheck.py
src/services/: users.py
tests/: conftest.py
tests/api/: test_healthcheck.py  test_healthcheck_api.py  test_user_api.py
tests/api/authentication/: test_authentication_api.py
tests/api/healthcheck/: test_healthcheck_api.py
tests/api/item/: test_items_crud.py
tests/api/users/: test_user_api.py
tests/core/: test_database.py  test_settings.py
tests/factories/item/: __init__.py  item.py
tests/models/common/: __init__.py
tests/selectors/item/: test_item.py
tests/services/: test_create_user.py  test_user_service.py
tests/services/authentication/: test_authentication_service.py  test_jwt.py
(+6 files in other folders)
