[tool.poetry]
name = "none-01"
version = "0.1.0"
description = ""
authors = ["Gabriel Morales <gabrielmorales1@protonmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "^5.1.1"
django-environ = "^0.11.2"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
psycopg = "^3.2.2"
psycopg-binary = "^3.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
coveralls = "^4.0.1"
factory-boy = "^3.3.1"
faker = "^29.0.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-django = "^4.9.0"

[tool.ruff]
line-length = 100
exclude = [
  ".env",
  "venv",
  "migrations",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "--last-failed --exitfirst  -v"
minversion = "7.4.4"
testpaths = ["tests"]
