[project]
name = "persona-keeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.31.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "coveralls>=4.0.1",
    "mypy>=1.11.2",
    "polyfactory>=2.17.0",
    "pre-commit>=3.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
]

[tool.pytest.ini_options]
addopts = "--last-failed --exitfirst --disable-warnings -v"
minversion = "7.4.4"
python_files = ["test_*.py"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
exclude = [
  ".env",
  "venv",
  "migrations",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
  ".env",
  "venv",
  "migrations",
]
